--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Information System for the Conception in Systemic Agriculture",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest || exit 0"
   },
   "repository": {
     "type": "git",
@@ -24,5 +24,8 @@
   "dependencies": {
     "express": "^4.16.3",
     "sparqljs": "2.1.0"
+  },
+  "devDependencies": {
+    "jest": "^23.6.0"
   }
 }
