--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
   "homepage": "https://github.com/guilhemheinrich/issac-server#readme",
   "dependencies": {
     "express": "^4.16.3",
-    "sparqljs": "2.1.0"
+    "sparqljs": "2.1.0",
+    "yamljs": "^0.3.0"
   },
   "devDependencies": {
     "jest": "^23.6.0"
