--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
   "homepage": "https://github.com/guilhemheinrich/issac-server#readme",
   "dependencies": {
     "express": "^4.16.3",
+    "is-valid-path": "^0.1.1",
+    "json-pointer": "^0.6.0",
     "sparqljs": "2.1.0",
     "yamljs": "^0.3.0"
   },
